# shipcon2

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  package.xml
driver/base_address_technologies_japan_drivers/: CMakeLists.txt  package.xml
driver/base_address_technologies_japan_drivers/include/base_address_technologies_japan_drivers/: motor.hh  radio_receiver.hh  rudder.hh
driver/base_address_technologies_japan_drivers/src/motor/: cpp_motor.cc  cpp_motor_node.cc  normal_motor.cc  normal_motor_node.cc
driver/base_address_technologies_japan_drivers/src/radio_receiver/: vectwin_radio_receiver.cc  vectwin_radio_receiver_node.cc
driver/base_address_technologies_japan_drivers/src/rudder/: vectwin_rudder.cc  vectwin_rudder_node.cc
driver/base_address_technologies_japan_msgs/: CMakeLists.txt  package.xml
driver/base_address_technologies_japan_msgs/msg/radio_receiver/: RadioReceiverShipMode.msg  RadioReceiverStatus.msg  RadioReceiverVectwinMode.msg
driver/japan_aeronautical_electronics_drivers/: CMakeLists.txt  package.xml
driver/japan_aeronautical_electronics_drivers/include/japan_aeronautical_electronics_drivers/: gyro.hh
driver/japan_aeronautical_electronics_drivers/src/gyro/: jg35fd.cc  jg35fd_node.cc
driver/japan_aeronautical_electronics_msgs/: CMakeLists.txt  package.xml
driver/japan_aeronautical_electronics_msgs/srv/gyro/jg35fd/: Jg35fdCalibrateBiasDrift.srv  Jg35fdControlCalculate.srv  Jg35fdControlOutput.srv  Jg35fdResetAngle.srv  Jg35fdSetAnalogMode.srv  Jg35fdSetAnalogRange.srv  Jg35fdSetAnalogYawrateRange.srv
drivers/gyro/shipdev_jg35fd/: CMakeLists.txt  package.xml
gui/shipcon2_gui/: CMakeLists.txt  package.xml  plugin_description.xml
gui/shipcon2_gui/include/shipcon2_gui/standard/: single_engine.hh
gui/shipcon2_gui/src/standard/: single_engine.cc
include/shipcon/device/gyro/: jae_jg35fd.hh
model/esso_osaka/: esso_osaka.blend  esso_osaka.dae  esso_osaka.ipt
model/meshes/: esso_osaka.dae
ros/install/: local_setup.sh  setup.sh
ros/install/shipcon2-ros/share/shipcon2-ros/: local_setup.sh  package.dsv  package.sh
ros/log/: latest_build
ros/src/install/: local_setup.sh  setup.sh
ros/src/install/shipcon2-ros/lib/shipcon2-ros/: talker
ros/src/install/shipcon2-ros/share/shipcon2-ros/: local_setup.sh  package.bash  package.ps1  package.sh  package.zsh
ros/src/log/: latest_build  latest_list
ros/src/shipcon2-ros/: CMakeLists.txt
ros/src/shipcon2-ros/include/shipcon2-ros/: ethcom_define.hpp  ethcom_socket.hpp  ethcomlib.hpp  udpcom.hpp
ros/src/shipcon2-ros/model/esso_osaka/: esso_osaka.stl
ros/src/shipcon2-ros/model/urdf/: esso_osaka.urdf
ros/src/shipcon2-ros/src/: ethcom_socket.cpp  ethcomlib.cpp  udpcom.cpp
src/: udpcom.cpp
vessel/cpp_vessel/: CMakeLists.txt  package.xml
vessel/cpp_vessel/launch/: device.py  device.xml
