<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>base_address_technologies_japan_drivers</name>
  <version>1.0.0</version>
  <description>SHIPCON Device Driver Series of BaseAddressTechnologiesJapan Co., Ltd.</description>
  <maintainer email="suisei_wada@naoe.eng.osaka-u.ac.jp">suisei</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>shipcon_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
