<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>japan_aeronautical_electronics_drivers</name>
  <version>1.0.0</version>
  <description>Shipcon Device Driver on ROS2 for JAE gyro JG35FD</description>
  <maintainer email="suisei_wada@naoe.eng.osaka-u.ac.jp">Suisei WADA</maintainer>
  <license>Apache2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>unit_convert_lib</depend>
  <depend>japan_aeronautical_electronics_msgs</depend>
  <depend>hardware_communication_lib</depend>
  <depend>shipcon_msgs</depend>
  <depend>Boost</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
