<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shipcon2_gui</name>
  <version>1.0.0</version>
  <description>GUI package for SHIPCON2</description>
  <maintainer email="suisei_wada@naoe.eng.osaka-u.ac.jp">Suisei WADA</maintainer>
  <license>Appache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rvizplugin</depend>
  <depend>rviz_common</depend>
  <depend>qtbase5-dev</depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>libqt5-svg</exec_depend>
  

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
