<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpp_vessel</name>
  <version>1.0.0</version>
  <description>CPP Vessel package with SHIPCON2</description>
  <maintainer email="suisei_wada@naoe.eng.osaka-u.ac.jp">Suisei WADA</maintainer>
  <license>Appache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>base_address_technologies_japan_drivers</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
